# alfred

./: .coding-master.toml  .env.secrets.example  .gitignore  AGENTS.md  CHANGELOG.md  HEARTBEAT.md  QUICKSTART.md  README.md  README_EN.md  SKILLS.md  acceptance_test.sh  everbot.sh  feature-1-add-memory-review-heartbeat.md  feature-1-readme-update.md  feature-1-refine-observability.md  feature-1-register-skill-evaluation.md  feature-1-run-e2e-tests.md  fix_heartbeat.py  goal.md  pyproject.toml  requirements.txt  verify_dolphin_api.py  技能.json  技能.srt  技能.tsv  技能.txt  技能.vtt
.github/workflows/: test.yml
.trae/skills/: tushare
config/: everbot.example.yaml  models.yaml.example
docs/: EVERBOT_DESIGN.md  SKILLS_GUIDE.md  channel_design.md  coding-master-design.md  coding-master-simplification-design.md  coding-master-v3-design.md  coding-master-v4-optimization-plan.md  coding_master_design.md  dolphin_bug_unknown_tool_feedback_loop.md  event_memory_design.md  evolving_design.md  glossary.md  group_conversation_design.md  heartbeat_refactor.md  history_policy_design.md  inspector_enrichment_design.md  memory_system_design.md  multi_agent_orchestration_design.md  ops_skill_design.md  optimization.md  runtime_design.md  skill_lifecycle_design.md
docs/design/: 124-report-skill-provenance.md  142-unified-routine-retry.md  143-routine-checkpoints.md  147-browser-process-lifecycle.md  166-long-session-history-compaction.md  168-chat-soft-timeout-deferred.md  34-milkie-daemon-integration-plan.md  34-milkie-daemon-integration.md
examples/: everbot_demo.py  real_agent_demo.py
loop_test/: __main__.py  agent_client.py  cases.yaml  config.yaml  evaluator.py  runner.py
scripts/: alfred-skills  debug_offbyone.py  dev-setup.sh  serve  slm_ensure_all.py  view_trajectory.py
skills/: tushare
skills/codex-coding-tool/: SKILL.md
skills/coding-master/: .gitignore  DESIGN.md  SKILL.md  coding_master_skillkit.py
skills/contrarian-signals/: SKILL.md
skills/daily-attractor/: SKILL.md
skills/dev-browser/: SKILL.md  package-lock.json
skills/gray-rhino/: SKILL.md
skills/invest/: SKILL.md
skills/investment-signal/: SKILL.md
skills/memory-review/: SKILL.md
skills/ops/: SKILL.md
skills/paper-discovery/: SKILL.md
skills/recall-memory/: SKILL.md
skills/routine-manager/: SKILL.md
skills/skill-evolver/: SKILL.md
skills/skill-installer/: README.md  SKILL.md  registry-example.json
skills/task-discover/: SKILL.md
skills/trace-review/: SKILL.md
skills/trajectory-reviewer/: SKILL.md
skills/twitter-watch/: SKILL.md
skills/web/: SKILL.md  package-lock.json  package.json  server.sh
skills/web-search/: SKILL.md
src/everbot/: README.md  __init__.py
tests/: conftest.py  run_tests.sh
tests/cli/: __init__.py  test_chat.py  test_main.py  test_session.py  test_status_stale_overrides.py
tests/e2e/: conftest.py  test_milkie_daemon_smoke.py  test_milkie_real_llm.py  test_milkie_run_command_e2e.py  test_milkie_serve_smoke.py  test_milkie_skill_request_e2e.py  test_ops_e2e.py  test_routine_checkpoint_e2e.py  test_routine_retry_e2e.py  test_session_reset_api.py  test_ws_chat_happy_path.py
tests/integration/: conftest.py  test_basic_workflow.py  test_channel_session_compression.py  test_daemon_lifecycle.py  test_deep_review_flow.py  test_delivery_content_parity.py  test_heartbeat_inject_history_bug.py  test_heartbeat_inject_history_bug_optimized.py  test_heartbeat_runner_flow.py  (+14 more)
(+476 files in other folders)
