[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "everbot"
version = "0.1.0"
description = "Persistent autonomous AI agent with heartbeat-driven task execution"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.124.0",
    "uvicorn[standard]==0.38.0",
    "jinja2==3.1.6",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "croniter>=1.3.0",
    "beautifulsoup4==4.14.3",
    "telegramify-markdown==1.0.0rc4",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow",
]
filterwarnings = [
    "ignore::DeprecationWarning:docstring_parser",
    "ignore::RuntimeWarning:.*coroutine.*was never awaited",
]

[tool.ruff]
line-length = 100
target-version = "py310"
