[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "everbot"
version = "0.1.0"
description = "Persistent autonomous AI agent with heartbeat-driven task execution"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.124.0",
    "uvicorn[standard]==0.38.0",
    "jinja2==3.1.6",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "croniter>=1.3.0",
    "beautifulsoup4==4.14.3",
    "telegramify-markdown==1.0.0rc4",
    "ddgs>=9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow",
]
filterwarnings = [
    "ignore::DeprecationWarning:docstring_parser",
    "ignore::RuntimeWarning:.*coroutine.*was never awaited",
]

# ═══════════════════════════════════════════════════════════════════════════
# Coverage Configuration (Added in Optimization)
# ═══════════════════════════════════════════════════════════════════════════
[tool.coverage.run]
source = ["src", "skills"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/.venv/*",
    "*/.claude/*",
    "*/.wt/*",
]
branch = true
parallel = true

[tool.coverage.report]
# Minimum coverage threshold for CI
fail_under = 75
# Show missing lines in terminal output
show_missing = true
# Sort by line number
sort = "-cover"
# Exclude patterns
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Everbot Coverage Report"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"skills/coding-master/scripts/*" = ["E402"]
"skills/coding-master/tests/**/*" = ["E402"]
"skills/investment-signal/scripts/*" = ["E402"]
"src/everbot/core/session/compressor.py" = ["E402"]
"src/everbot/core/session/session.py" = ["E402"]
"src/everbot/core/tasks/routine_manager.py" = ["E402"]
"src/everbot/web/services/chat_service.py" = ["E402"]
